Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102607

macdeployqt: errors when producing a universal binary (universal binary)

XMLWordPrintable

    • macOS
    • 12fb2cfa11 (qt/qtbase/dev) 12fb2cfa11 (qt/tqtc-qtbase/dev) 3a8f2b0ed0 (qt/qtbase/6.3) 3a8f2b0ed0 (qt/tqtc-qtbase/6.3) 723bca3fae (qt/tqtc-qttools/5.15) 679652b77d (qt/tqtc-qttools/6.2) 723bca3fae (qt/tqtc-qttools/5.15.11)

      Really excited about universal binaries support in 5.15.9 but unfortunately the macdeployqt tool doesn't work.

      ERROR: no file at "/usr/lib/libqcocoa.dylib"
      ERROR: no file at "/usr/lib/libcocoaprintersupport.dylib"
      ERROR: no file at "/usr/lib/libqmacstyle.dylib"
      ERROR: no file at "/usr/lib/libqgenericbearer.dylib"
      ERROR: no file at "/usr/lib/libqgif.dylib"
      ERROR: no file at "/usr/lib/libqico.dylib"
      ERROR: no file at "/usr/lib/libqjpeg.dylib"

      Verbose output file is attached. For some reason the tool ignores standard locations for plugins (/usr/local/Qt-5.15.9/plugins/xxx) and tries to search in /usr/lib. Once I add a location manually, e.g.

      macdeployqt myApp.app -libpath=/usr/local/Qt-5.15.9/plugins/imageformats

      then some of errors dissapear:

      ERROR: no file at "/usr/lib/libqcocoa.dylib"
      ERROR: no file at "/usr/lib/libcocoaprintersupport.dylib"
      ERROR: no file at "/usr/lib/libqmacstyle.dylib"
      ERROR: no file at "/usr/lib/libqgenericbearer.dylib"

      Qt is compiled using

      ./configure "QMAKE_APPLE_DEVICE_ARCHS=arm64 x86_64" -opensource -confirm-license -nomake examples -nomake tests -no-openssl -securetransport
      

        1. macdeploqt_verbose_output.txt
          104 kB
          Ilya Parniuk
        2. Screenshot 2022-04-15 at 16.58.24.png
          53 kB
          Ilya Parniuk
        For Gerrit Dashboard: QTBUG-102607
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            crystalbit Ilya Parniuk
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: